--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <a href="https://reverent-goldstine-ceea54.netlify.app/"><img width="300" height="300" src="img/zendit.PNG" alt="zendit maketi"></a>
             <a href="https://github.com/AbdunazarovU/Zendit">GitHub</a>
         </li>
+        <li>
+            <a href="https://group-work-from-ozoda-ulugbek-akbar.netlify.app/"><img src="img/crowdfund.PNG" alt="crowdfund sayti"></a>
+            <a href="https://github.com/OzodaKhamdamova/group-work-crowdfunding-page/blob/main/index.html">GitHub</a>
+        </li>
     </ul>
 </body>
 </html>
