--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             <a href="https://group-work-from-ozoda-ulugbek-akbar.netlify.app/"><img width="300" height="300" src="img/crowdfund.PNG" alt="crowdfund sayti"></a>
             <a href="https://github.com/OzodaKhamdamova/group-work-crowdfunding-page/blob/main/index.html">GitHub</a>
         </li>
+        <li>
+            <a href="https://frosty-jones-521cd8.netlify.app/"><img width="300" height="300" src="img/shop.PNG" alt="shop"></a>
+            <a href="https://github.com/AbdunazarovU/shop">GitHub</a>
+        </li>
     </ul>
 </body>
 </html>
