--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
     <p>These are my projects.</p>
     <ul>
         <li>
-            <a href="https://siteforchallange.netlify.app/"><img width="300" height="300" src="img/Снимок.PNG" alt="fylo site"></a>
-            <a href="https://github.com/AbdunazarovU/site-for-challange">GitHub</a>
+            <a target="_blank" href="https://siteforchallange.netlify.app/"><img width="300" height="300" src="img/Снимок.PNG" alt="fylo site"></a>
+            <a target="_blank" href="https://github.com/AbdunazarovU/site-for-challange">GitHub</a>
         </li>
         <li>
-            <a href="https://upbeat-elion-524e82.netlify.app/"><img width="300" height="300" src="img/chat.PNG" alt="chat, peace of Facebook"></a>
-            <a href="https://github.com/AbdunazarovU/assets">GitHub</a>
+            <a target="_blank" href="https://upbeat-elion-524e82.netlify.app/"><img width="300" height="300" src="img/chat.PNG" alt="chat, peace of Facebook"></a>
+            <a target="_blank" href="https://github.com/AbdunazarovU/assets">GitHub</a>
         </li>
         <li>
-            <a href="https://jovial-keller-c29393.netlify.app/"><img width="300" height="300" src="img/Namanganliklar24.PNG" alt="Namanganliklar24"></a>
-            <a href="https://github.com/AbdunazarovU/challange-header-namangan24">GitHub</a>
+            <a target="_blank" href="https://jovial-keller-c29393.netlify.app/"><img width="300" height="300" src="img/Namanganliklar24.PNG" alt="Namanganliklar24"></a>
+            <a target="_blank" href="https://github.com/AbdunazarovU/challange-header-namangan24">GitHub</a>
         </li>
         <li>
-            <a href="https://reverent-goldstine-ceea54.netlify.app/"><img width="300" height="300" src="img/zendit.PNG" alt="zendit maketi"></a>
-            <a href="https://github.com/AbdunazarovU/Zendit">GitHub</a>
+            <a target="_blank" href="https://reverent-goldstine-ceea54.netlify.app/"><img width="300" height="300" src="img/zendit.PNG" alt="zendit maketi"></a>
+            <a target="_blank" href="https://github.com/AbdunazarovU/Zendit">GitHub</a>
         </li>
         <li>
-            <a href="https://group-work-from-ozoda-ulugbek-akbar.netlify.app/"><img width="300" height="300" src="img/crowdfund.PNG" alt="crowdfund sayti"></a>
-            <a href="https://github.com/OzodaKhamdamova/group-work-crowdfunding-page/blob/main/index.html">GitHub</a>
+            <a target="_blank" href="https://group-work-from-ozoda-ulugbek-akbar.netlify.app/"><img width="300" height="300" src="img/crowdfund.PNG" alt="crowdfund sayti"></a>
+            <a target="_blank" href="https://github.com/OzodaKhamdamova/group-work-crowdfunding-page/blob/main/index.html">GitHub</a>
         </li>
         <li>
-            <a href="https://frosty-jones-521cd8.netlify.app/"><img width="300" height="300" src="img/shop.PNG" alt="shop"></a>
-            <a href="https://github.com/AbdunazarovU/shop">GitHub</a>
+            <a target="_blank" href="https://frosty-jones-521cd8.netlify.app/"><img width="300" height="300" src="img/shop.PNG" alt="shop"></a>
+            <a target="_blank" href="https://github.com/AbdunazarovU/shop">GitHub</a>
         </li>
     </ul>
 </body>
