crowdfund page update

--- a/index.html
+++ b/index.html
@@ -28,12 +28,8 @@
             <a target="_blank" href="https://github.com/AbdunazarovU/Zendit">GitHub</a>
         </li>
         <li>
-            <a target="_blank" href="https://group-work-from-ozoda-ulugbek-akbar.netlify.app/"><img width="300" height="300" src="img/crowdfund.PNG" alt="crowdfund sayti"></a>
-            <a target="_blank" href="https://github.com/OzodaKhamdamova/group-work-crowdfunding-page/blob/main/index.html">GitHub</a>
-        </li>
-        <li>
-            <a target="_blank" href="https://frosty-jones-521cd8.netlify.app/"><img width="300" height="300" src="img/shop.PNG" alt="shop"></a>
-            <a target="_blank" href="https://github.com/AbdunazarovU/shop">GitHub</a>
+            <a target="_blank" href="https://zealous-leavitt-1a560d.netlify.app/"><img width="300" height="300" src="img/crowdfund.PNG" alt="crowdfund sayti"></a>
+            <a target="_blank" href="https://github.com/AbdunazarovU/crowdfund_page">GitHub</a>
         </li>
     </ul>
 </body>
